[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Handsy/idle2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Handsy/idle3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Handsy/idle1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Handsy/fist.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/healthbar.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "attack1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "stagger",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 77.4775
height = 282.659

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 144.674, 84.5046 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 85.6043, 58.9525 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="CapsuleShape2D" id=6]
radius = 51.204
height = 376.041

[sub_resource type="CapsuleShape2D" id=7]

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation Axis/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation Axis/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation Axis/AnimatedSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -40.235, -219.887 ), Vector2( -54.1, -220.303 ), Vector2( -48.4245, -224.297 ) ]
}

[sub_resource type="Animation" id=9]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation Axis/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation Axis/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "stagger" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation Axis:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -70.4, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rotation Axis/AnimatedSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -39.3914, -204.335 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackEnded"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Rotation Axis/AnimatedSprite/hitzone:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "AttackR"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation Axis/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation Axis/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "stagger" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation Axis:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 70.4, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rotation Axis/AnimatedSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -39.3914, -204.335 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackEnded"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Rotation Axis/AnimatedSprite/hitzone:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation Axis/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotation Axis/AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotation Axis/AnimatedSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -20.1119, -13.8907 ), Vector2( -48.7024, -225.797 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Aggro"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "AttackR"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=22]
states/Aggro/node = SubResource( 12 )
states/Aggro/position = Vector2( 157, 88 )
states/Attack/node = SubResource( 13 )
states/Attack/position = Vector2( 329, 20 )
states/AttackR/node = SubResource( 14 )
states/AttackR/position = Vector2( 423, 102 )
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 266, 230 )
transitions = [ "Idle", "Aggro", SubResource( 16 ), "Aggro", "Idle", SubResource( 17 ), "Aggro", "Attack", SubResource( 18 ), "Attack", "Aggro", SubResource( 19 ), "Aggro", "AttackR", SubResource( 20 ), "AttackR", "Aggro", SubResource( 21 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="Handsy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Rotation Axis" type="Node2D" parent="."]
position = Vector2( 30, 200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Rotation Axis"]
position = Vector2( -48.7024, -225.797 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "idle"

[node name="hitzone" type="Area2D" parent="Rotation Axis/AnimatedSprite"]
position = Vector2( -725.19, 823.186 )
scale = Vector2( 4, 4 )
monitoring = false
monitorable = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotation Axis/AnimatedSprite/hitzone"]
rotation = -1.6057
shape = SubResource( 2 )

[node name="aggroTrigger" type="Area2D" parent="Rotation Axis/AnimatedSprite"]
position = Vector2( 74.8096, 103.186 )
scale = Vector2( 4, 4 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotation Axis/AnimatedSprite/aggroTrigger"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -459.877, 24.2309 )
scale = Vector2( 7, 7 )
shape = SubResource( 3 )

[node name="aggroLoss" type="Area2D" parent="Rotation Axis/AnimatedSprite"]
visible = false
position = Vector2( 74.8096, 103.186 )
scale = Vector2( 4, 4 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotation Axis/AnimatedSprite/aggroLoss"]
position = Vector2( -306.375, 15.874 )
scale = Vector2( 10, 10 )
shape = SubResource( 4 )

[node name="attackRange" type="Area2D" parent="Rotation Axis/AnimatedSprite"]
position = Vector2( 74.8096, 103.186 )
scale = Vector2( 4, 4 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotation Axis/AnimatedSprite/attackRange"]
position = Vector2( -200, 0 )
scale = Vector2( 10, 25 )
shape = SubResource( 5 )

[node name="bodyArea" type="Area2D" parent="Rotation Axis/AnimatedSprite"]
visible = false
position = Vector2( 74.8096, 103.186 )
scale = Vector2( 4, 4 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotation Axis/AnimatedSprite/bodyArea"]
position = Vector2( 12.6598, -1.13858 )
shape = SubResource( 6 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Aggro = SubResource( 8 )
anims/Attack = SubResource( 9 )
anims/AttackR = SubResource( 10 )
anims/Idle = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 23 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -108.531
margin_top = -276.208
margin_right = 91.4695
margin_bottom = -256.208
rect_min_size = Vector2( 200, 20 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
tint_under = Color( 0.196078, 0.196078, 0.196078, 1 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Rotation Axis/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Rotation Axis/AnimatedSprite/aggroTrigger" to="." method="_on_aggroTrigger_body_entered"]
[connection signal="body_exited" from="Rotation Axis/AnimatedSprite/aggroLoss" to="." method="_on_aggroLoss_body_exited"]
[connection signal="body_entered" from="Rotation Axis/AnimatedSprite/attackRange" to="." method="_on_attackRange_body_entered"]
[connection signal="body_exited" from="Rotation Axis/AnimatedSprite/attackRange" to="." method="_on_attackRange_body_exited"]
[connection signal="area_entered" from="Rotation Axis/AnimatedSprite/bodyArea" to="." method="_on_bodyArea_area_entered"]
